--- a/index.html
+++ b/index.html
@@ -50,25 +50,25 @@
         </div>
     </nav>
     <div class="container my-3">
-        <h2>KITRC Library</h2>
+        <h3>KITRC Library</h3>
         <hr>
         <!------------------------------------- From --------------------------------------------------->
         <form id="libraryForm">
             <div class="row mt-3 mb-3">
-                <label for="bookName" class="col-sm-2 col-form-label">Name</label>
+                <label for="bookName" class="col-sm-2 col-form-label">Name :</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" id="bookName" placeholder="Book Name">
                 </div>
             </div>
             <div class="row mb-3">
-                <label for="author" class="col-sm-2 col-form-label">Author</label>
+                <label for="author" class="col-sm-2 col-form-label">Author :</label>
                 <div class="col-sm-10">
                     <input type="author" class="form-control" id="author" placeholder="Author">
                 </div>
             </div>
             <fieldset class="row mb-3">
-                <legend class="col-form-label col-sm-2 pt-0">Type</legend>
-                <div class="col-sm-10">
+                <legend class="col-form-label col-sm-2 pt-0">Type :</legend>
+                <div class="col-sm-10 ">
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="type" id="fiction" value="Fiction" checked>
                         <label class="form-check-label" for="gridRadios1">
@@ -118,14 +118,11 @@
                 </div>
             </fieldset>
 
-            <button type="submit" class="btn btn-primary">Add Book</button>
+            <button type="submit" id="submit_btn" class="btn btn-primary">Add Book</button>
 
 
-        </form>
-        <br>
-<hr>
-
-        <h2>Your Books</h2>
+        </form><hr>
+        <h4>Your Books</h4>
         <hr>
         <div id="table">
             <table class="table">
