--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
             </div>
         </div>
     </nav>
+    <div id="msg">
+        <!-- <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div> -->
+    </div>
+
+
+
     <div class="container my-3">
         <h3>KITRC Library</h3>
         <hr>
