--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <fieldset class="row mb-3">
-                <legend class="col-form-label col-sm-2 pt-0">Type :</legend>
+                <legend class="col-form-label col-sm-2 pt-0">Type :</legend> 
                 <div class="col-sm-10 ">
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="type" id="fiction" value="Fiction" checked>
@@ -141,6 +141,7 @@
                         <th scope="col">Name</th>
                         <th scope="col">Author</th>
                         <th scope="col">Type</th>
+                        <th scope="col">Delete</th>
                     </tr>
                 </thead>
                 <tbody id='tableBody'>
