--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Welcome to KITRC Library</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -77,7 +78,7 @@
             </div>
             <fieldset class="row mb-3">
                 <legend class="col-form-label col-sm-2 pt-0">Type :</legend> 
-                <div class="col-sm-10 ">
+                <div class="col-sm-10 d-flex p-2 d-grid gap-5 ">
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="type" id="fiction" value="Fiction" checked>
                         <label class="form-check-label" for="gridRadios1">
@@ -144,7 +145,7 @@
                         <th scope="col">Delete</th>
                     </tr>
                 </thead>
-                <tbody id='tableBody'>
+                <tbody id='tableBody' style="margin-top: 10px; "  >
                     <!-- <tr>
                         
                         <td>Mark</td>
