Added functionality to  clear whole list

--- a/index.html
+++ b/index.html
@@ -132,7 +132,10 @@
 
 
         </form><hr>
+        <div class="d-flex flex-row justify-content-between">
         <h4>Your Books</h4>
+      <div id="clear_all_btn"><button id=""onclick="clearNote(this.id)" class="btn btn-primary">Clear All </button> </div>
+        </div> 
         <hr>
         <div id="table">
             <table class="table table-striped">
