--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
                 <thead>
                     <tr>
                         
+                        <th scope="col">No.</th>
                         <th scope="col">Name</th>
                         <th scope="col">Author</th>
                         <th scope="col">Type</th>
